# vcd_rust_nom_test

./: Cargo.toml
src/: error.rs  helpers.rs  lib.rs  parse_timescale.rs  parser.rs  types.rs  vcd.rs
src/parser/: command_definition_parser.rs  command_parser.rs  date.rs  helpers.rs  timescale.rs  version.rs
src/parser/command_definition_parser/: timescale.rs
src/parser/command_parser/: date.rs  timescale.rs  version.rs
tests/: test_command.rs  test_file_reads.rs  test_integration.rs
tests/golden_files/: preamble.vcd  preamble_extra_whitespace.vcd
