[package]
name = "vcd_rust"
version = "0.1.0"
authors = ["Sean McLoughlin <smcloughlin1015@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "6.0.0"
strum = "0.19"
strum_macros = "0.19"
thiserror = "1.0"
derive_builder = "0.9.0"